# google-calendar-gestor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: change_day.py  main.py
src/google_actions/: start_sesion.py
